--- a/style.css
+++ b/style.css
@@ -39,22 +39,26 @@ h1{
   	grid-gap: 15px 25px;
   	grid-auto-flow: row;
   	grid-template-areas:
-    	". . . ";
+    	". . .";
 }
 .todo__item{
 	height: 400px;
 	width: 250px;
 	background-color: var(--todo-item-background);
-	border: 1px solid #000;
+	border: 1.5px solid #000;
 	border-radius: 20px;
 	padding: 10px;
-	margin-bottom: 10px;
+	margin-bottom: 15px;
 	display: flex;
 	flex-direction: column;
 	box-shadow: 10px 10px 8px 0px rgba(34, 60, 80, 0.15);
 }
+.todo__item-mask{
+	height: 100%;
+	width: 100%;
+}
 .blurred{
-	filter: blur(5px);
+	filter: blur(7px);
   	overflow: hidden;
   	transition: 0.5s;
 }
@@ -70,17 +74,21 @@ h1{
 }
 
 .todo__item-header{
-	margin: 0 auto;
+	margin: 20px auto;
 	margin-bottom: 25px;
 	font-size: 35px;
+	text-align: center;
 }
 .todo__item-content{
+	flex-grow: 1;
 	margin: 10px auto;
-	height: 200px;
-	max-width: 100%;
-	text-align: center;
-	overflow: auto;
+	max-width: 200px;
+	height: 100%;
+	white-space: pre-line;
+  	overflow: hidden;
+  	text-overflow: ellipsis;
 	font-size: 18px;
+	line-height: 20px;
 }
 
 .todo__form{
